# airport-noise-info

./: CNAME  README.md  TODO.md  data.csv  index.html  report.html  style.css
data-investigation/: data.pkl  pyproject.toml  visualization.ipynb
data-investigation-rs/: Cargo.toml
data-investigation/data_investigation/: visualization.ipynb
