[package]
name = "data-investigation-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = "2.33"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
url = { version = "2.0", features = ["serde"] }

polars = "0.27.2"
reqwest = { version = "0.11.14", features = ["json"] }
sqlx = { version = "0.6", features = [
    "runtime-actix-native-tls",
    "postgres",
    "chrono",
] }
actix-web = "4"
log = "0.4.17"
env_logger = "0.10.0"
scraper = "0.14.0"
plotters = "0.3.4"
charts = "0.3.0"
