[tool.poetry]
name = "data-investigation"
version = "0.1.0"
description = ""
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.2"
polars = "^0.16.10"
pandas = "^1.5.3"
seaborn = "^0.12.2"
altair = "^4.2.2"
requests = "^2.28.2"
opencv-python = "^4.7.0.72"
camelot-py = "^0.11.0"
ghostscript = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
